tests/valid/module/package_root/numbers.facet
pub fn id(x: affine isize) -> affine isize {
  x
}

fn main() -> affine isize {
  (id 1)
}
