tests/invalid/replace_error/replace_consumes_target.facet
fn f(mut x: affine isize) -> affine isize {
    (replace x x)
}
